Добавлено исключение линтера в venv и pycache, readme перенесено в отдельную папку и разделено на несколько файлов

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,10 @@
 	},
 	"python.linting.mypyEnabled": true,
 	"python.analysis.typeCheckingMode": "basic",
+	"python.analysis.ignore": [
+		"venv",
+		"**/__pycache__",
+	],
 	"formatFiles.excludedFolders": [
 		"node_modules",
 		".vscode",
@@ -23,5 +27,8 @@
 		"venv"
 	],
 	"formatFiles.excludePattern": "**/__pycache__/**",
-	"formatFiles.useGitIgnore": true
+	"formatFiles.useGitIgnore": true,
+	"vscord.ignore.repositories": [
+		"system-control-machine"
+	],
 }
