--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,9 @@ coalesce_brackets = true
 
 [tool.yapfignore]
 ignore_patterns = ["venv"]
+
+[tool.isort]
+profile = "django"
+force_sort_within_sections = true
+line_length = 100
+include_trailing_comma = true
