--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"editor.formatOnSave": false,
+	"editor.formatOnSave": true,
 	"python.formatting.provider": "yapf",
 	"editor.detectIndentation": false,
 	"editor.insertSpaces": false,
